--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "react": "^16.5.2",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
     "react-test-renderer": "^16.5.2"
